fixed overflow problem

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,11 +8,11 @@ body {
 
 .container {
   width: 100%;
-  max-width: 960px;
+  max-width: 920px;
   margin: 0 auto;
 
   @media screen and (max-width: 751px) {
-    max-width: 480px;
+    max-width: 460px;
   }
 }
 
@@ -28,7 +28,6 @@ body {
 .player {
   border-radius: 10px;
   transition: transform 1s;
-  position: relative;
   margin-top: -21px;
 
   &:hover {
@@ -38,20 +37,7 @@ body {
     z-index: 1;
 
     & .player__description {
-      transform: scale(1.2);
-    }
-
-    & .player__img {
-      border-radius: 60px;
-    }
-
-    & .player__title {
-      transform: scale(1.2);
-    }
-
-    & .player__description {
       opacity: 1;
-      transform: scale(1.2);
     }
   }
 
@@ -87,12 +73,12 @@ body {
   }
 
   &__title {
-    position: relative;
     display: flex;
     justify-content: center;
     font-size: 20px;
     line-height: 23px;
     color: #2f4f4f;
+    width: 100%;
     margin-bottom: 9px;
     transition: all 1s;
   }
@@ -101,13 +87,13 @@ body {
     display: flex;
     justify-content: center;
     font-family: Arial;
+    width: 100%;
     opacity: 0;
     font-size: 18px;
     line-height: 21px;
     color: #000;
     padding-bottom: 16px;
     transition: transform 1s;
-    border-top-left-radius: 6px;
     transition: opacity 1s, transform 1s;
   }
 }
